# chlero-robot

./: README.md
altitude_sensor/: CMakeLists.txt  README.md
altitude_sensor/include/epos_functions/: epos_functions.cpp  epos_functions.h
altitude_sensor/include/hexapod_class/: hexapod_class.cpp  hexapod_class.h
altitude_sensor/msg/: Num.msg
altitude_sensor/src/: altitude_sensor_node.cpp  epos_functions.cpp  motores_estado_lectura.cpp  robot_control.cpp  robot_control_clear_faults.cpp  robot_position_control.cpp  robot_position_control_no_cereal.cpp  robot_position_control_tripod_2.cpp  robot_position_stand_up.cpp  robot_position_stand_up.cpp.save
clhero_hw/: CMakeLists.txt  package.xml
clhero_hw/include/epos_functions/: epos_functions.cpp
clhero_hw/include/movement_orders/: movement_orders.cpp  movement_orders.h
clhero_hw/libraries/epos_functions/: epos_functions.cpp
clhero_hw/libraries/movement_orders/: movement_orders.cpp
clhero_hw/src/: robot_movement.cpp
hexapod_robot/: CMakeLists.txt  package.xml
hexapod_robot/src/: hexapod_robot.cpp
src/nodes/: hw_control_interface.cpp
